--- a/index.html
+++ b/index.html
@@ -1913,7 +1913,7 @@ var pJS = function (e, a) {
                               </div>
                          </div>
                          <h3 class="name"></h3>
-                         <h3 class="sub-name">• Ｂａｓｓｙａ •</h3>
+                         <h3 class="sub-name">• Manoj Kumar •</h3>
                     </div>
                </div>
 
